--- a/package.json
+++ b/package.json
@@ -12,39 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "angular2-materialize": "^15.0.4",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^10.0.7",
+    "@angular/common": "^10.0.7",
+    "@angular/compiler": "^10.0.7",
+    "@angular/core": "^10.0.7",
+    "@angular/forms": "^10.0.7",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^10.0.7",
+    "@angular/platform-browser-dynamic": "^10.0.7",
+    "@angular/platform-server": "^10.0.7",
+    "@angular/router": "^10.0.7",
+    "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
-    "jquery": "^2.2.4",
-    "materialize-css": "^0.98.2",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "jquery": "^3.5.1",
+    "materialize-angular": "^0.7.10",
+    "materialize-css": "^1.0.0",
+    "rxjs": "^6.6.2",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "tslib": "^2.0.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.6",
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.7",
+    "@types/jasmine": "3.5.12",
+    "@types/node": "~14.0.27",
+    "codelyzer": "~6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.3",
+    "typescript": "^3.2.4"
   }
 }
